tidy up the bag content and fix its responsive issues,Fix the animation bug on home page on safari browsers, fix similar product cards' padding issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,8 @@ html {
     overflow-x: hidden;
 }
 
+
+
 body {
     height: calc(100vh - 164px);
     color: rgb(0, 0, 0);
@@ -447,6 +449,20 @@ footer.page-footer{
 }
 
 
+.navInActive
+{                                                                      
+-webkit-transform:translate3d(0px, 0, 0);
+-moz-transform:translate3d(0px, 0, 0);
+-ms-transform:translate3d(0px, 0, 0);
+-ms-transform:translate(0px, 0);
+-o-transform:translate3d(0px, 0, 0);
+ transform:translate3d(0px, 0, 0);
+ z-index: 0;-ms-transform:translate(0, 0);
+-webkit-transition: all 300ms ease;
+-moz-transition: all 300ms ease;-ms-transition: all 300ms ease;
+-o-transition: all 300ms ease;transition: all 300ms ease;
+}
+
 .header-container-allauth{
     padding-top: 8.5rem;
 }
@@ -563,6 +579,10 @@ footer.page-footer{
         min-width: fit-content;
         overflow-x: hidden;
 
+    }
+
+    p{
+        font-size: smaller;
     }
 
 
